--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@
         // 3. Đưa HTML và CSS vào container
         container.html(chatStyles + chatHTML);
 
-        // 4. JavaScript (Lấy từ script.js và gắn vào ID duy nhất)
+        // 4. JavaScript (Lấy từ script và gắn vào ID duy nhất)
         // Chúng ta không dùng DOMContentLoaded vì DOM đã sẵn sàng
 
         // Tìm các phần tử trong phạm vi cửa sổ ($win)
