--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>ChatUIA</title>
+<title>Tomtitmui</title>
 
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
@@ -1114,7 +1114,7 @@ function renderTerminal(container, id, $win) {
         scrollToBottom();
     };
 
-    // Helper: Xóa Typing Indicator
+    //
     const removeTyping = () => messagesContainer.find('.typing-wrapper').remove();
 
     // Helper: Hiển thị tin nhắn
