--- a/index.html
+++ b/index.html
@@ -1330,115 +1330,124 @@ function renderTerminal(container, id, $win) {
     function renderTextEdit(container, id, $win) {
     const uniqueId = $win.attr('id');
 
-    // 1. CSS cho form đăng nhập đẹp
+    // 1. CSS Styles (Đã tối ưu để hiển thị tốt trong cửa sổ nhỏ)
     const styles = `
     <style>
-        .auth-app-${uniqueId} {
-            padding: 30px;
+        .auth-container-${uniqueId} {
+            width: 100%;
             height: 100%;
             background: #f5f5f7;
             display: flex;
-            flex-direction: column;
             align-items: center;
             justify-content: center;
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
-            color: #333;
-            box-sizing: border-box;
+            overflow-y: auto; /* Cho phép cuộn nếu cửa sổ quá nhỏ */
         }
         .auth-card {
             background: white;
-            padding: 30px;
+            padding: 25px;
             border-radius: 12px;
-            box-shadow: 0 4px 20px rgba(0,0,0,0.08);
-            width: 100%;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+            width: 90%;
             max-width: 320px;
             text-align: center;
+            animation: fadeIn 0.3s ease-in-out;
         }
-        .auth-title { font-size: 20px; font-weight: 600; margin-bottom: 20px; color: #1d1d1f; }
+        @keyframes fadeIn { from { opacity: 0; transform: translateY(10px); } to { opacity: 1; transform: translateY(0); } }
+
+        .auth-title { font-size: 22px; font-weight: 700; margin-bottom: 20px; color: #1d1d1f; }
         .auth-input {
             width: 100%;
-            padding: 12px;
+            padding: 10px 12px;
             margin-bottom: 12px;
             border: 1px solid #d2d2d7;
             border-radius: 8px;
             font-size: 14px;
-            box-sizing: border-box;
+            box-sizing: border-box; /* Quan trọng để không bị tràn lề */
             outline: none;
-            transition: border-color 0.2s;
         }
-        .auth-input:focus { border-color: #0071e3; }
+        .auth-input:focus { border-color: #0071e3; box-shadow: 0 0 0 3px rgba(0,113,227,0.1); }
+
         .auth-btn {
             width: 100%;
-            padding: 12px;
+            padding: 10px;
             background: #0071e3;
             color: white;
             border: none;
             border-radius: 8px;
             font-size: 14px;
-            font-weight: 500;
+            font-weight: 600;
             cursor: pointer;
             transition: background 0.2s;
         }
         .auth-btn:hover { background: #0077ed; }
-        .auth-btn.secondary { background: #f5f5f7; color: #333; margin-top: 10px; }
-        .auth-btn.secondary:hover { background: #e8e8ed; }
-        .auth-link {
-            display: block;
-            margin-top: 15px;
-            font-size: 12px;
-            color: #0071e3;
-            cursor: pointer;
-            text-decoration: none;
-        }
-        .auth-link:hover { text-decoration: underline; }
+        .auth-btn:disabled { background: #ccc; cursor: not-allowed; }
+
+        .auth-btn.secondary { background: transparent; color: #0071e3; margin-top: 10px; font-weight: normal; }
+        .auth-btn.secondary:hover { background: #e8e8ed; text-decoration: underline; }
+
+        .auth-links { display: flex; justify-content: space-between; margin-top: 15px; font-size: 12px; }
+        .auth-link { color: #666; cursor: pointer; text-decoration: none; }
+        .auth-link:hover { color: #0071e3; }
+
         .hidden { display: none !important; }
-        .otp-group { display: flex; gap: 5px; margin-bottom: 12px; }
-        .error-msg { color: #ff3b30; font-size: 12px; margin-bottom: 10px; display: none; }
+        .error-msg { color: #ff3b30; font-size: 13px; margin-bottom: 10px; text-align: left; display: none; }
+        .success-msg { color: #28cd41; font-size: 13px; margin-bottom: 10px; text-align: center; display: none; }
     </style>
     `;
 
     // 2. HTML Structure
     const html = `
-    <div class="auth-app-${uniqueId}">
+    <div class="auth-container-${uniqueId}">
 
+        <!-- VIEW: LOGIN -->
         <div id="view-login" class="auth-card">
             <div class="auth-title">Đăng Nhập</div>
             <div class="error-msg" id="login-error"></div>
+
             <input type="email" id="login-email" class="auth-input" placeholder="Email (@tnut.edu.vn)">
             <input type="password" id="login-pass" class="auth-input" placeholder="Mật khẩu">
+
             <button class="auth-btn" id="btn-login">Đăng nhập</button>
-            <div style="display:flex; justify-content:space-between;">
+
+            <div class="auth-links">
                 <a class="auth-link" id="link-forgot">Quên mật khẩu?</a>
-                <a class="auth-link" id="link-register">Tạo tài khoản</a>
+                <a class="auth-link" id="link-register">Đăng ký mới</a>
             </div>
         </div>
 
+        <!-- VIEW: REGISTER -->
         <div id="view-register" class="auth-card hidden">
             <div class="auth-title">Tạo Tài Khoản</div>
             <div class="error-msg" id="reg-error"></div>
+            <div class="success-msg" id="reg-success"></div>
 
+            <!-- Bước 1: Nhập info -->
             <div id="reg-step-1">
                 <input type="email" id="reg-email" class="auth-input" placeholder="Email của bạn">
                 <input type="password" id="reg-pass" class="auth-input" placeholder="Tạo mật khẩu">
-                <button class="auth-btn" id="btn-send-otp-reg">Gửi mã OTP xác thực</button>
+                <button class="auth-btn" id="btn-send-otp-reg">Gửi mã OTP</button>
             </div>
 
+            <!-- Bước 2: Nhập OTP -->
             <div id="reg-step-2" class="hidden">
-                <div style="font-size:12px; color:green; margin-bottom:10px;">Đã gửi OTP về email!</div>
-                <input type="text" id="reg-otp" class="auth-input" placeholder="Nhập mã OTP 6 số">
-                <button class="auth-btn" id="btn-verify-reg">Hoàn tất đăng ký</button>
+                <p style="font-size:12px; color:#666; margin-bottom:10px;">Đã gửi OTP đến email của bạn.</p>
+                <input type="text" id="reg-otp" class="auth-input" placeholder="Nhập mã 6 số">
+                <button class="auth-btn" id="btn-verify-reg">Xác thực & Đăng ký</button>
             </div>
 
             <button class="auth-btn secondary" id="back-to-login-1">Quay lại đăng nhập</button>
         </div>
 
+        <!-- VIEW: FORGOT PASSWORD -->
         <div id="view-forgot" class="auth-card hidden">
-            <div class="auth-title">Khôi Phục Mật Khẩu</div>
+            <div class="auth-title">Quên Mật Khẩu</div>
             <div class="error-msg" id="forgot-error"></div>
 
             <div id="forgot-step-1">
-                <input type="email" id="forgot-email" class="auth-input" placeholder="Nhập email tài khoản">
-                <button class="auth-btn" id="btn-send-otp-forgot">Lấy mã OTP</button>
+                <p style="font-size:12px; color:#666; margin-bottom:10px;">Nhập email để nhận mã khôi phục.</p>
+                <input type="email" id="forgot-email" class="auth-input" placeholder="Email tài khoản">
+                <button class="auth-btn" id="btn-send-otp-forgot">Gửi mã</button>
             </div>
 
             <div id="forgot-step-2" class="hidden">
@@ -1452,78 +1461,128 @@ function renderTerminal(container, id, $win) {
     </div>
     `;
 
+    // 3. RENDER LÊN GIAO DIỆN (QUAN TRỌNG NHẤT)
     container.html(styles + html);
 
-    // 3. Logic JavaScript (JQuery)
+    // 4. LOGIC JAVASCRIPT (Sử dụng container.find để không bị nhầm lẫn giữa các cửa sổ)
     const viewLogin = container.find('#view-login');
     const viewReg = container.find('#view-register');
     const viewForgot = container.find('#view-forgot');
 
-    // Chuyển view
-    container.find('#link-register').click(() => { viewLogin.addClass('hidden'); viewReg.removeClass('hidden'); });
-    container.find('#link-forgot').click(() => { viewLogin.addClass('hidden'); viewForgot.removeClass('hidden'); });
+    // -- CHUYỂN VIEW --
+    container.find('#link-register').click(() => {
+        container.find('.error-msg').hide();
+        viewLogin.addClass('hidden');
+        viewReg.removeClass('hidden');
+    });
+    container.find('#link-forgot').click(() => {
+        container.find('.error-msg').hide();
+        viewLogin.addClass('hidden');
+        viewForgot.removeClass('hidden');
+    });
     container.find('#back-to-login-1, #back-to-login-2').click(() => {
-        viewReg.addClass('hidden'); viewForgot.addClass('hidden'); viewLogin.removeClass('hidden');
+        container.find('.error-msg').hide();
+        viewReg.addClass('hidden');
+        viewForgot.addClass('hidden');
+        viewLogin.removeClass('hidden');
+        // Reset steps
+        container.find('#reg-step-1').removeClass('hidden');
+        container.find('#reg-step-2').addClass('hidden');
     });
 
-    // --- LOGIC GỌI API ---
+    // -- LOGIC API --
 
-    // 1. Đăng nhập
-    container.find('#btn-login').click(async () => {
+    // A. ĐĂNG NHẬP
+    container.find('#btn-login').click(async function() {
+        const btn = $(this);
         const email = container.find('#login-email').val();
         const password = container.find('#login-pass').val();
+        const errorBox = container.find('#login-error');
+
+        if(!email || !password) return errorBox.text("Vui lòng nhập đủ thông tin").show();
+
+        btn.text('Đang xử lý...').prop('disabled', true);
+        errorBox.hide();
 
         try {
             const res = await fetch('/api/login', {
-                method: 'POST',
-                headers: {'Content-Type': 'application/json'},
+                method: 'POST', headers: {'Content-Type': 'application/json'},
                 body: JSON.stringify({ email, password })
             });
             const data = await res.json();
 
             if (data.success) {
-                // LƯU USER ID VÀO LOCALSTORAGE
+                // Lưu vào LocalStorage
                 localStorage.setItem('userId', data.userId);
                 localStorage.setItem('userEmail', email);
-                alert('Đăng nhập thành công! Hãy mở ứng dụng Chat.');
+
+                // Hiệu ứng thành công
+                btn.text('Thành công!').css('background', '#28cd41');
+                setTimeout(() => {
+                    // Đóng cửa sổ Login này lại
+                    $win.remove();
+                    // Mở App Chat (Giả sử ID app chat là 'chat')
+                    // Bạn cần gọi hàm mở app chat ở đây, ví dụ: openApp('chat');
+                    alert(`Xin chào ${data.user?.name || email}. Hãy mở ứng dụng Chat!`);
+                }, 1000);
             } else {
-                container.find('#login-error').text(data.message || 'Lỗi đăng nhập').show();
+                errorBox.text(data.message || 'Đăng nhập thất bại').show();
+                btn.text('Đăng nhập').prop('disabled', false);
             }
-        } catch (e) { alert('Lỗi kết nối server'); }
+        } catch (e) {
+            errorBox.text('Lỗi kết nối server').show();
+            btn.text('Đăng nhập').prop('disabled', false);
+        }
     });
 
-    // 2. Gửi OTP Đăng ký
-    container.find('#btn-send-otp-reg').click(async () => {
+    // B. ĐĂNG KÝ - GỬI OTP (Cần Backend hỗ trợ)
+    container.find('#btn-send-otp-reg').click(async function() {
+        const btn = $(this);
         const email = container.find('#reg-email').val();
-        // Gọi API gửi OTP (bạn cần viết API này)
-        // Mock success:
-        container.find('#reg-step-1').addClass('hidden');
-        container.find('#reg-step-2').removeClass('hidden');
+        const pass = container.find('#reg-pass').val();
+        const errorBox = container.find('#reg-error');
+
+        if(!email || !pass) return errorBox.text("Vui lòng nhập Email và Mật khẩu").show();
+
+        // Giả lập gửi OTP thành công (Vì chưa có API send-otp thật)
+        // Khi có API: await fetch('/api/send-otp', ...)
+        btn.text('Đang gửi...').prop('disabled', true);
+
+        setTimeout(() => {
+            container.find('#reg-step-1').addClass('hidden');
+            container.find('#reg-step-2').removeClass('hidden');
+            container.find('#reg-success').text('Mã OTP giả lập: 123456 (Check server log)').show();
+            btn.text('Gửi mã OTP').prop('disabled', false);
+        }, 1000);
     });
 
-    // 3. Xác thực Đăng ký
-    container.find('#btn-verify-reg').click(async () => {
+    // C. ĐĂNG KÝ - XÁC THỰC
+    container.find('#btn-verify-reg').click(async function() {
         const email = container.find('#reg-email').val();
         const password = container.find('#reg-pass').val();
         const otp = container.find('#reg-otp').val();
+        const errorBox = container.find('#reg-error');
 
-        // Gọi API register thật
-        const res = await fetch('/api/register', {
-             method: 'POST',
-             headers: {'Content-Type': 'application/json'},
-             body: JSON.stringify({ email, password, otp })
-        });
-        const data = await res.json();
+        if(!otp) return errorBox.text("Vui lòng nhập OTP").show();
 
-        if(data.success) {
-            alert('Tạo tài khoản thành công!');
-            viewReg.addClass('hidden'); viewLogin.removeClass('hidden');
-        } else {
-            alert(data.message);
+        try {
+            const res = await fetch('/api/register', {
+                method: 'POST', headers: {'Content-Type': 'application/json'},
+                body: JSON.stringify({ email, password, otp }) // Backend cần xử lý OTP này
+            });
+            const data = await res.json();
+
+            if(data.success) {
+                alert('Đăng ký thành công! Vui lòng đăng nhập.');
+                container.find('#back-to-login-1').click(); // Quay về login
+            } else {
+                errorBox.text(data.message).show();
+            }
+        } catch (e) {
+            errorBox.text('Lỗi kết nối').show();
         }
     });
 }
-
 
 
 
